@@ -1456,6 +1456,9 @@ Vim
 .RS 5
 .PD 0
 .TP 4
+.I a
+autocommand groups
+.TP 4
 .I f
 functions
 .TP 4
